fixed contrast error

--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -54,15 +54,11 @@
 .btn-nav {
   font-weight: 600;
   padding: 0.4em;
-  background-color: var(--pink);
-}
-#navLinkColor {
-  color: white;
+  border: 2px solid var(--pink);
 }
 
 .btn-nav:hover,
 .btn-nav:active {
   transition: opacity 0.3s ease;
   box-shadow: var(--box-shadow);
-  background-color: var(--light-pink);
 }
